# FinRAG

./: .env.example  .gitignore  README.md  pyproject.toml
docker/: docker-compose.yml
docs/: 01-系统架构设计.md  02-需求规格说明书.md  03-项目开发文档.md
src/finrag/: __init__.py  __main__.py
src/finrag/api/: main.py  routes.py  schemas.py
src/finrag/app/: __init__.py  chat.py
src/finrag/common/: config.py  exceptions.py
src/finrag/ingest/: __init__.py  pipeline.py
src/finrag/models/: __init__.py  embeddings.py  llm.py
src/finrag/persistence/: __init__.py  db.py
src/finrag/rag/chains/: __init__.py  rag_chain.py
src/finrag/rag/index/: __init__.py  store.py
src/finrag/rag/parse/: __init__.py  chunker.py  loader.py
src/finrag/rag/retrieve/: __init__.py  retriever.py
src/finrag/security/: __init__.py  auth.py
tests/: conftest.py  test_api.py
training/: README.md
training/configs/: sft_lora.example.yaml
training/scripts/: train_sft.py
