[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-rag-ft"
version = "0.1.0"
description = "Financial RAG + fine-tuning scaffold (FastAPI, LangChain, Chroma)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.1.0",
  "httpx>=0.26.0",
  "langchain>=0.1.0",
  "langchain-core>=0.1.0",
  "langchain-community>=0.0.20",
  "langchain-openai>=0.0.5",
  "langchain-chroma>=0.1.0",
  "langchain-text-splitters>=0.0.1",
  "chromadb>=0.4.0",
  "pypdf>=4.0.0",
  "rank-bm25>=0.2.2",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23.0", "ruff>=0.2.0"]
train = [
  "torch>=2.1.0",
  "transformers>=4.36.0",
  "peft>=0.7.0",
  "trl>=0.7.0",
  "datasets>=2.16.0",
  "accelerate>=0.25.0",
  "bitsandbytes>=0.42.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
